# ecsGame

./: CMakeLists.txt
game/include/: ecs.h
game/include/components/: components.h
game/include/math/: math.h  vec2.h
game/include/systems/: colliderDrawSystem.h  collisionSystem.h  doorSystem.h  flowerShooterSystem.h  inputSystem.h  mapSystem.h  positionAnimationSystem.h  spriteRenderSystem.h  systems.h
game/include/util/: util.h
game/src/: ecs.cpp  main.cpp
game/src/math/: vec2.cpp
